<resources>
    <string name="app_name">ProdisCom</string>
    <string name="prompt_email">DNI</string>
    <string name="prompt_password">Contrasenya</string>
    <string name="action_sign_in">Inicia Sessió</string>
    <string name="action_sign_in_short">Inicia Sessió</string>
    <string name="welcome">"Benvingut! "</string>
    <string name="invalid_username">Usuari no valid</string>
    <string name="invalid_password">Contrasenya ha de tenir minim 4 digits</string>
    <string name="login_failed">Login fallat</string>
    <string name="any_change">No s\'ha produit cap canvi</string>
    <string name="que_quieres_hacer">¿Que vols fer?</string>
    <string name="autoritzacions">Autoritzacions</string>
    <string name="autorizaciones">Autoritzacions</string>
    <string name="usuarios">Usuaris</string>
    <string name="cerrar_sesion">Tancar Sessió</string>
    <string name="todo">TODO</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="failed_login">Inici de Sessió fallat</string>
    <string name="invalid_auth">DNI o Contrasenya incorrectes</string>
    <string name="invalid_dni">DNI no valid</string>
    <string name="perfil">Perfil</string>
    <string name="accept">Acceptar</string>
    <string name="signup_failed">No s\'ha pogut completar el registre.</string>
    <string name="mod_confirm">Estas segur que vols modificar el missatge?</string>
    <string name="del_confirm">Estas segur que vols eliminar l\'usuari?</string>
    <string name="error">Error</string>
    <string name="crear_autorizaci">Crear Autorizació</string>
    <string name="confirm">Confirmar</string>
    <string name="enviar">Enviar</string>
    <string name="resultats">Resultats</string>
    <string name="configuraci">Configuració</string>
    <string name="condicions_i_privacitat">Condicions i privacitat</string>
    <string name="afegir_usuari">Afegir usuari</string>
    <string name="eliminar_usuari">Eliminar usuari</string>
    <string name="modificar_usuari">Modificar usuari</string>
    <string name="validar_usuari">Validar usuari</string>
    <string name="usuaris_bloquejats">Usuaris Bloquejats</string>
    <string name="necessites_ajuda">Necessites ajuda?</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="any_user_data">No existeix cap usuari amb aquestes dades</string>
    <string name="usuari">Usuari</string>
    <string name="introdueixi_un_usuari_i_contrasenya_per_entrar">Introdueixi un usuari i contrasenya per entrar!</string>
    <string name="iniciar_sesi">Iniciar Sessió</string>
    <string name="comunicaci_amb_les_fam_lies">Comunicació amb les famílies</string>
    <string name="prodiscom">ProdisCom</string>
    <string name="condicions">Condicions</string>
    <string name="has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="help">Ajuda</string>
    <string name="help_info">Hauras d\'introduir el DNI, Contrasenya, Email i acceptar les condicions de servei, la informacio familiar es opcional. Si ja t\'has registrat clica en Inicia Sessio.</string>
    <string name="help_login_info">Hauras d\'introduir el DNI i la contrasenya de 4 digits, si no tens un usuari clica en el text Registrar-se.</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="cancel">Cancel·lar</string>
    <string name="field_empty">Has d\'emplenar tots els camps</string>
    <string name="grups">Grups</string>
    <string name="title_activity_grups">Grups</string>
    <string name="user_not_found">Usuari no trovat</string>
    <string name="user_not_validate">Usuari no validat</string>
    <string name="user_block">Usuari bloquejat</string>
    <string name="user_deleted">Usuari eliminat</string>
    <string name="error_check_user">Error al comprobar usuari</string>
    <string name="changes_applied">S\'han guardat els canvis </string>
    <string name="mail_changed">Email canviat satisfactoriament</string>
    <string name="register_success">Registre Complert</string>
    <string name="new_message">Tens 1 nou missatge</string>
    <string name="register_complete">El registre s\'ha completat correctament, hauras d\'esperar a que un administrador validi el teu usuari, aquest proces pot trigar uns dies</string>
    <string name="not_match">Email i Dni no coincideixen</string>
    <string name="mail_success">El correu s\'ha enviat correctament</string>
    <string name="mail_failed">S\'ha produit un error, proba un altre cop</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_conf_regsitro">ConfRegsitre</string>
    <string name="grup">Grup</string>
    <string name="missatges">Missatges</string>
    <string name="login_help">Hauras d\'introduir el DNI i la contrasenya de 4 digits, si no tens un usuari clica en el text Registrar-se.</string>
    <string name="buscar_usuari">Introdueix un email d\'usuari</string>
    <string name="chats">Missatges</string>
    <string name="crear_grup">Crear Grup</string>
    <string name="nom_del_grup">Nom del grup</string>
    <string name="seleccionar_participants">Seleccionar participants</string>
    <string name="seleccionar_usuaris">Seleccionar usuaris</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="item">Item</string>
    <string name="correu">Correu:</string>
    <string name="dni">Dni:</string>
    <string name="nom">Nom:</string>
    <string name="data">Data:</string>
    <string name="descripcio">Descripció</string>
    <string name="cognoms">Cognoms</string>
    <string name="telf">Telf:</string>
    <string name="escriu_el_teu_nom">Escriu el teu nom</string>
    <string name="escriu_els_teus_cognoms">Escriu els teus cognoms</string>
    <string name="indica_el_teu_dni">Indica el teu DNI</string>
    <string name="escriu_el_teu_correu_electronic">Escriu el teu correu electronic</string>
    <string name="introdueix_el_teu_numero">Introdueix el teu numero</string>
    <string name="introdueix_una_contrasenya">Introdueix una contrasenya</string>
    <string name="confirmar_contrasenya">Confirmar Contrasenya</string>
</resources>