<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logged.users.Usuarios">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleBGUsuarios"
            style="@style/backgroundTitulos"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnReturnUser"
            android:src="@drawable/ic_baseline_salir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/return_home" />

        <TextView
            android:id="@+id/txtUsuaris"
            style="@style/titulos"
            android:layout_marginTop="32dp"
            android:text="@string/usuarios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAddUser"
            style="@style/botonesUsuarios"
            android:text="@string/afegir_usuari"
            app:icon="@drawable/ic_baseline_adduser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBGUsuarios" />

        <Button
            android:id="@+id/btnBloqUser"
            style="@style/botonesUsuarios"
            android:text="@string/usuaris_bloquejats"
            app:icon="@drawable/ic_baseline_bloqueadouser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnValUser" />

        <Button
            android:id="@+id/btnDelUser"
            style="@style/botonesUsuarios"
            android:text="@string/eliminar_usuari"
            app:icon="@drawable/ic_baseline_deluser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddUser" />

        <Button
            android:id="@+id/btnValUser"
            style="@style/botonesUsuarios"
            android:text="@string/validar_usuari"
            app:icon="@drawable/ic_baseline_validaruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnModUser" />

        <Button
            android:id="@+id/btnModUser"
            style="@style/botonesUsuarios"
            android:text="@string/modificar_usuari"
            app:icon="@drawable/ic_baseline_editaruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDelUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>