<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtCrearGrupCorreu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correu"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCrearGrupDisplayCorreu"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/select_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar" />

    </LinearLayout>

</androidx.cardview.widget.CardView>