<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.app.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="697dp">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_login"
                    android:drawableStart="@drawable/custom_perfil_icon"
                    android:drawablePadding="12dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMsgEntrar" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/custom_login"
                    android:drawableStart="@drawable/custom_key_icon"
                    android:drawablePadding="12dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:minHeight="48dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/prodis"
                    android:enabled="false"
                    android:text="@string/action_sign_in"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.514"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75"
                    app:strokeColor="#193A18"
                    app:strokeWidth="1dp"
                    tools:ignore="UnknownId" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <ImageView
                    android:id="@+id/iVLogo"
                    android:layout_width="137dp"
                    android:layout_height="112dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_logo" />

                <TextView
                    android:id="@+id/txtProdisCom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prodiscom"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iVLogo"
                    app:layout_constraintVertical_bias="0.01" />

                <TextView
                    android:id="@+id/txtComunicacioFamilies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/comunicaci_amb_les_fam_lies"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtProdisCom" />

                <TextView
                    android:id="@+id/txtIniciarSesio"
                    style="@style/textoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesi"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtComunicacioFamilies"
                    app:layout_constraintVertical_bias="0.075" />

                <TextView
                    android:id="@+id/txtMsgEntrar"
                    style="@style/textoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/introdueixi_un_usuari_i_contrasenya_per_entrar"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtIniciarSesio" />

                <TextView
                    android:id="@+id/txtVAjuda"
                    style="@style/textoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/necessites_ajuda"
                    android:textColor="@color/lila_prodis"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintVertical_bias="0.15" />

                <TextView
                    android:id="@+id/txtVOlCont"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/has_oblidat_la_contrasenya"
                    android:textColor="@color/lila_prodis"
                    android:textSize="@dimen/dimens_login_bot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtVAjuda"
                    app:layout_constraintVertical_bias="0.50" />

                <TextView
                    android:id="@+id/txtVRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar_se"
                    android:textColor="@color/lila_prodis"
                    android:textSize="@dimen/dimens_login_bot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.85"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtVAjuda" />

                <ImageView
                    android:id="@+id/btnShow"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/eye_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:srcCompat="@drawable/ic_baseline_eye" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>